log

Wed 13 Mar 2024 09:11:30 PM UTC: 
 exercises.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
3379e04
Wed 13 Mar 2024 09:14:40 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:32:7: error: unused variable ‘temp’ [-Werror=unused-variable]
   32 |   int temp;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
e383cd1
Wed 13 Mar 2024 09:14:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
b23fe93
Wed 13 Mar 2024 09:15:25 PM UTC: 
 exercises.c | 12 +-----------
 1 file changed, 1 insertion(+), 11 deletions(-)
 tests:  0|7
total_score: 0/70
bec0f61
